guardamos el modelo

--- a/cnn_cifar10.ipynb
+++ b/cnn_cifar10.ipynb
@@ -282,6 +282,50 @@
     "test_loss, test_acc = model.evaluate(x_test, y_test, verbose=2)\n",
     "print(f\"Precisión final en el conjunto de prueba: {test_acc:.3f}\")\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "2562ca3d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/10\n",
+      "\u001b[1m704/704\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m17s\u001b[0m 24ms/step - accuracy: 0.8476 - loss: 0.4344 - val_accuracy: 0.6864 - val_loss: 1.0617\n",
+      "Epoch 2/10\n",
+      "\u001b[1m704/704\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m16s\u001b[0m 23ms/step - accuracy: 0.8544 - loss: 0.4143 - val_accuracy: 0.6830 - val_loss: 1.1134\n",
+      "Epoch 3/10\n",
+      "\u001b[1m704/704\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m21s\u001b[0m 23ms/step - accuracy: 0.8611 - loss: 0.3929 - val_accuracy: 0.6876 - val_loss: 1.1142\n",
+      "Epoch 4/10\n",
+      "\u001b[1m704/704\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m16s\u001b[0m 23ms/step - accuracy: 0.8666 - loss: 0.3781 - val_accuracy: 0.6954 - val_loss: 1.1399\n",
+      "Epoch 5/10\n",
+      "\u001b[1m704/704\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m21s\u001b[0m 23ms/step - accuracy: 0.8743 - loss: 0.3560 - val_accuracy: 0.6942 - val_loss: 1.1739\n",
+      "Epoch 6/10\n",
+      "\u001b[1m704/704\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m20s\u001b[0m 23ms/step - accuracy: 0.8816 - loss: 0.3349 - val_accuracy: 0.6936 - val_loss: 1.2223\n",
+      "Epoch 7/10\n",
+      "\u001b[1m704/704\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m16s\u001b[0m 23ms/step - accuracy: 0.8843 - loss: 0.3208 - val_accuracy: 0.6792 - val_loss: 1.2795\n",
+      "Epoch 8/10\n",
+      "\u001b[1m704/704\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m16s\u001b[0m 23ms/step - accuracy: 0.8927 - loss: 0.3028 - val_accuracy: 0.6896 - val_loss: 1.3113\n",
+      "Epoch 9/10\n",
+      "\u001b[1m704/704\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m17s\u001b[0m 23ms/step - accuracy: 0.8996 - loss: 0.2839 - val_accuracy: 0.6860 - val_loss: 1.3799\n",
+      "Epoch 10/10\n",
+      "\u001b[1m704/704\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m17s\u001b[0m 24ms/step - accuracy: 0.9060 - loss: 0.2648 - val_accuracy: 0.6744 - val_loss: 1.4157\n",
+      "Pesos guardados correctamente ✅\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Entrenar modelo\n",
+    "history = model.fit(x_train, y_train, epochs=10, validation_split=0.1, batch_size=64)\n",
+    "\n",
+    "# Guardar pesos del modelo entrenado\n",
+    "model.save_weights(\"cnn_cifar10.weights.h5\")\n",
+    "\n",
+    "print(\"Pesos guardados correctamente ✅\")\n"
+   ]
   }
  ],
  "metadata": {
